# IlliumEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt  glad.c
Engine/include/: callbacks.h  main.h
Engine/include/engine/: camera.h  structures.h
Engine/include/util/: constants.h
Engine/src/: callbacks.c  draw_calls.c  main.c
Engine/src/engine/: camera.c
Engine/src/util/: shader.c
Lib/glfw-3.4/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters
Lib/glfw-3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
Tutorial_Stuff/: CMakeLists.txt
Tutorial_Stuff/include/: callbacks.h  draw_calls.h  main.h
Tutorial_Stuff/include/glad/: glad.h
Tutorial_Stuff/include/io/: io.h
Tutorial_Stuff/include/util/: constants.h  shader.h
Tutorial_Stuff/resources/shaders/fragment/: defaultFrag.glsl
Tutorial_Stuff/resources/shaders/vertex/: defaultVert.glsl
Tutorial_Stuff/src/: callbacks.c  draw_calls.c  main.c
Tutorial_Stuff/src/io/: io.c
Tutorial_Stuff/src/util/: shader.c
